slight changes at the download and upload buttons behavior for a better user ecperience - added small gap on bottom of the screen when uploading to give an illusion of bigger space on the screen, also added an auto scroll to see the upload simulation better so it won't be hide at the bottom of the screen, added another timeout method to the upload button to prevent the option of clicking it before it's visible, and set a useEffect to the download link to make sure the user could'nt download the video before the loading simulation ends

--- a/src/style/controlers.css
+++ b/src/style/controlers.css
@@ -44,6 +44,7 @@
     box-shadow: 4px 4px 3px grey;
     cursor: pointer;
     opacity: 0;
+    display: none;
     transition: opacity 1s ease;
 }
 .controlers_btn_upload:hover{
